copy from wordpress

--- a/index.html
+++ b/index.html
@@ -1,7 +1,58 @@
 <!DOCTYPE html>
-<html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<html lang="en-US">
+	<head>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+	<meta name="HandheldFriendly" content="true" />
+	<meta name="apple-mobile-web-app-capable" content="YES" />
+	<title>Morgan Carter</title>
+	<link rel="stylesheet" type="text/css" href="media/css/style.css" />
+</head>
+<body class="home blog">
+	<div class="border"></div>
+
+	<div id="container">
+		<div class="hero js-hero">
+			<!-- <div class="hero-main hero-text">
+				<span>Morgan Carter</span>
+			</div>
+			<div class="hero-main hero-bg"></div> -->
+			<div class="hero-content js-hero-content">
+				<h3 class="js-hero-height-one" style="margin-bottom: -10px;">Hi, I'm</h3>
+				<h1 class="js-hero-height-two">Morgan Carter</h1>
+				<h3 class="js-hero-height-three">
+					<a class="accent important js-what-am-i-refresh"><i class="icon-refresh"></i></a>
+					I'm <span class="js-what-am-i">a web developer</span>.
+				</h3>
+			</div>
+			<a class="icon-chevron-down js-scroll-down scroll-down"></a>
+		</div>
+
+		<div class="js-scroll-to">
+			<p class="js-widget-description"></p>
+			<script>var stackWidgetAssetPath = "//widgetapp.teaser.stackla.com/"; var stackWidgetDomain = "widgetapp.teaser.stackla.com"</script>
+			<div class='stacklafw' data-id='75' data-ct='' data-alias='morgan.teaser.stackla.com' data-ttl="30"></div>
+			<script type='text/javascript'>
+			    (function (d, id) {
+			        if (d.getElementById(id)) return;
+			        var t = d.createElement('script');
+			        t.type = 'text/javascript';
+			        t.src = 'http://morgan.teaser.stackla.com/media/js/widget/fluid-embed-preview.js';
+			        t.id = id;
+			        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(t);
+
+					var css = document.createElement('link');
+					css.rel = 'stylesheet';
+					css.href = 'http://morgan.teaser.stackla.com/media/css/widget/stacklapopup/stacklapopup.css';
+					(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(css);
+			    }(document, 'stacklafw-js'));
+			</script>
+			</div>
+		</div>
+	</div>
+
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+	<script src='media/js/fastclick.js'></script>
+	<script src='media/js/script.js'></script>
 </body>
 </html>
