--- a/index.html
+++ b/index.html
@@ -6,31 +6,111 @@
 	<meta name="HandheldFriendly" content="true" />
 	<meta name="apple-mobile-web-app-capable" content="YES" />
 	<title>Morgan Carter</title>
+	<link href='http://fonts.googleapis.com/css?family=Sorts+Mill+Goudy:400,400italic' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="media/css/style.css" />
 </head>
 <body class="home blog">
 	<div class="border"></div>
 
-	<div id="container">
-		<div class="hero js-hero">
-			<!-- <div class="hero-main hero-text">
-				<span>Morgan Carter</span>
-			</div>
-			<div class="hero-main hero-bg"></div> -->
-			<div class="hero-content js-hero-content">
-				<h3 class="js-hero-height-one" style="margin-bottom: -10px;">Hi, I'm</h3>
-				<h1 class="js-hero-height-two">Morgan Carter</h1>
-				<h3 class="js-hero-height-three">
-					<a class="accent important js-what-am-i-refresh"><i class="icon-refresh"></i></a>
-					I'm <span class="js-what-am-i">a web developer</span>.
-				</h3>
-			</div>
-			<a class="icon-chevron-down js-scroll-down scroll-down"></a>
+	<section class="hero js-hero">
+		<!-- <div class="hero-main hero-text">
+			<span>Morgan Carter</span>
 		</div>
+		<div class="hero-main hero-bg"></div> -->
+		<div class="hero-content js-hero-content">
+			<h3 class="js-hero-height-one" style="margin-bottom: -10px;">Hi, I'm</h3>
+			<h1 class="js-hero-height-two">Morgan Carter</h1>
+			<h3 class="js-hero-height-three">
+				<a class="accent important js-what-am-i-refresh"><i class="icon-refresh"></i></a>
+				I'm <span class="js-what-am-i">a web developer</span>.
+			</h3>
+		</div>
+	</section>
 
-		<div class="js-scroll-to">
-			<p class="js-widget-description"></p>
-			<script>var stackWidgetAssetPath = "//widgetapp.teaser.stackla.com/"; var stackWidgetDomain = "widgetapp.teaser.stackla.com"</script>
+	<section class="clearfix">
+		<article>
+			<h3 class="title">About me</h3>
+			<div class="paragraph">
+				I'm:
+				<ul>
+					<li>
+						a Web Developer and Interaction Designer.
+					</li>
+					<li>
+						currently employed at <a href="//www.stackla.com" target="_blank">Stackla</a>.
+					</li>
+					<li>
+						living in <a href="https://www.google.com/maps/place/Sydney+NSW/@-33.8744203,151.2183768,13z/data=!4m2!3m1!1s0x6b129838f39a743f:0x3017d681632a850">Sydney, Australia</a>.
+					</li>
+					<li>
+						currently listening to <a href="http://open.spotify.com/track/6a8cSWHDPLihu4liqTlzX6" target="_blank">The Tragically Hip</a>.
+					</li>
+					<li>
+						trying to find a new pair of appropriately hipster glasses.
+					</li>
+					<li>
+						always interested in cool projects, so drop me a line: <a href="mailto:morgancarter1@gmail.com">morgancarter1@gmail.com</a>.
+					</li>
+				</ul>
+			</div>
+		</article>
+	</section>
+
+	<section>
+		<article>
+			<h3 class="title">Portfolio</h3>
+			<div class="paragraph">
+				<p>
+					These are some of the things I've made over the years - some are designed, others just coded up. Check out the descriptions in each for more info! If you're interested in working with me, <a class='important' href='mailto:morgancarter1@gmail.com'>drop me a line</a>.
+				</p>
+			</div>
+			<ul class="grid portfolio clearfix">
+				<li class="col-2">
+					<article>
+						<a href="stateofmind.html">
+							<div class="description">
+								<h4>State of Mind</h4>
+								<p>This conceptual design project was one of the finalists for the 2012 OzChi 24hr Student Competition.</p>
+							</div>
+							<img src="media/images/stateofmind/standing.jpg">
+						</a>
+					</article>
+				</li>
+				<li class="col-2">
+					<article>
+						<a>
+							<div class="description">
+								<h4>Stackla.com Website</h4>
+								<p>The Stackla website is fully responsive and retina, and features HTML5 video and Stackla social widgets.</p>
+							</div>
+							<img src="media/images/stacklawww/home.jpg">
+						</a>
+					</article>
+				</li>
+				<li class="col-2">
+					<article>
+						<a>
+							<div class="description">
+								<h4>State of Mind</h4>
+								<p>This conceptual design project was one of the finalists for the 2012 OzChi 24hr Student Competition.</p>
+							</div>
+							<img src="media/images/stateofmind/postits.jpg">
+						</a>
+					</article>
+				</li>
+				<li class="col-2">
+					<article>
+						<a>
+							<div class="description">
+								<h4>State of Mind</h4>
+								<p>This conceptual design project was one of the finalists for the 2012 OzChi 24hr Student Competition.</p>
+							</div>
+							<img src="media/images/stateofmind/brainstorming.jpg">
+						</a>
+					</article>
+				</li>
+			</ul>
+			<!--<script>var stackWidgetAssetPath = "//widgetapp.teaser.stackla.com/"; var stackWidgetDomain = "widgetapp.teaser.stackla.com"</script>
 			<div class='stacklafw' data-id='75' data-ct='' data-alias='morgan.teaser.stackla.com' data-ttl="30"></div>
 			<script type='text/javascript'>
 			    (function (d, id) {
@@ -47,11 +127,31 @@
 					(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(css);
 			    }(document, 'stacklafw-js'));
 			</script>
-			</div>
-		</div>
-	</div>
+			</div>-->
+		</article>
+	</section>
 
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+	<section class="clearfix">
+		<article>
+			<h3 class="title">Get in touch</h3>
+			<div class="paragraph">
+				There's a few ways to get in touch:
+				<ul>
+					<li>
+						<a href="mailto:morgancarter1@gmail.com">Email</a> is probably the easiest.
+					</li>
+					<li>
+						You can find me on <a href="https://twitter.com/morgoe876" target="_blank">Twitter</a> but please don't take me seriously there!
+					</li>
+					<li>
+						I recently acquired a <a href="https://dribbble.com/morgoe876" target="_blank">Dribbble</a> account too.
+					</li>
+				</ul>
+			</div>
+		</article>
+	</section>
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 	<script src='media/js/fastclick.js'></script>
 	<script src='media/js/script.js'></script>
 </body>
