--- a/stateofmind.html
+++ b/stateofmind.html
@@ -6,6 +6,10 @@
 	<meta name="HandheldFriendly" content="true" />
 	<meta name="apple-mobile-web-app-capable" content="YES" />
 	<title>Morgan Carter</title>
+	<!--[if lt IE 9]>
+	<script src="media/js/html5shiv.js"></script>
+	<![endif]-->
+
 	<link href='http://fonts.googleapis.com/css?family=Sorts+Mill+Goudy:400,400italic' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="media/css/style.css" />
 </head>
@@ -27,7 +31,7 @@
 			<h3 class="title">The Project</h3>
 			<div class="paragraph">
 				<p>
-					State of Mind was a 24 hour design challenge set by OzChi. Myself and four other designers - Mark Mitchell, Emila Yang, Hanley Weng and Adam Younis - set out at 8am on Saturday morning with the design brief:
+					State of Mind was a 24 hour design challenge set by OzChi. Myself and four other designers - <a href="https://twitter.com/zlot" target="_blank">Mark Mitchell</a>, <a href="http://emilayang.com/" target="_blank">Emila Yang</a>, <a href="https://twitter.com/hanleyweng" target="_blank">Hanley Weng</a> and <a href="https://twitter.com/AdamCYounis" target="_blank">Adam Younis</a> - set out at 8am on Saturday morning with the design brief:
 				</p>
 				<blockquote>
 					"Design a system that takes advantage of cloud computing, mobile devices, and fast mobile networks to enhance the way people interact with each other collaboratively"
