--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 	<meta name="HandheldFriendly" content="true" />
 	<meta name="apple-mobile-web-app-capable" content="YES" />
 	<title>Morgan Carter</title>
+	<!--[if lt IE 9]>
+	<script src="media/js/html5shiv.js"></script>
+	<![endif]-->
+	
 	<link href='http://fonts.googleapis.com/css?family=Sorts+Mill+Goudy:400,400italic' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="media/css/style.css" />
 </head>
