--- a/stackla.html
+++ b/stackla.html
@@ -1,59 +1,6 @@
-<!DOCTYPE html>
-<html lang="en-US">
-	<head>
-	<meta charset="UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-	<meta name="HandheldFriendly" content="true" />
-	<meta name="apple-mobile-web-app-capable" content="YES" />
-	<title>Morgan Carter</title>
-	<!--[if lt IE 9]>
-	<script src="media/js/html5shiv.js"></script>
-	<![endif]-->
+<?php include 'head'; ?>
 
-	<link href='http://fonts.googleapis.com/css?family=Sorts+Mill+Goudy:400,400italic' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" type="text/css" href="media/css/style.css" />
-</head>
-<body class="portfolio-piece has-header">
-	<header>
-		<nav>
-			<ul class="clearfix">
-				<li>
-					<a class="js-open-mobile-nav">☰</a>
-				</li>
-				<li>
-					<a>Home</a>
-				</li>
-				<li>
-					<a>About</a>
-				</li>
-				<li class="active">
-					<a>Portfolio</a>
-				</li>
-				<li>
-					<a>Contact</a>
-				</li>
-			</ul>
-		</nav>
-	</header>
-	<div class="mobile-nav">
-		<nav>
-			<ul>
-				<li>
-					<a>Home</a>
-				</li>
-				<li>
-					<a>About</a>
-				</li>
-				<li class="active">
-					<a>Portfolio</a>
-				</li>
-				<li>
-					<a>Contact</a>
-				</li>
-			</ul>
-		</nav>
-	</div>
-	<div class="mobile-nav-closer js-close-mobile-nav"></div>
+	<div class="border"></div>
 
 	<section class="hero" style="background-image: url(media/images/stateofmind/standing-hd.jpg);">
 		<!-- <div class="hero-main hero-text">
@@ -145,7 +92,7 @@
 			</div>
 			<div class="cta-wrapper">
 				<a class="cta">
-					<h3>Get in touch</h3>
+					Get in touch
 				</a>
 			</div>
 		</article>
