iphone gyroscope changes, amongst others

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		<article>
 			<h3 class="title">About me</h3>
 			<div class="paragraph">
-				I'm:
+				<p>I'm:</p>
 				<ul>
 					<li>
 						a Web Developer and Interaction Designer.
@@ -139,7 +139,7 @@
 		<article>
 			<h3 class="title">Get in touch</h3>
 			<div class="paragraph">
-				There's a few ways to get in touch:
+				<p>There's a few ways to get in touch:</p>
 				<ul>
 					<li>
 						<a href="mailto:morgancarter1@gmail.com">Email</a> is probably the easiest.
