--- a/stateofmind.html
+++ b/stateofmind.html
@@ -72,29 +72,27 @@
 				<p>
 					State of Mind was a 24 hour design challenge set by OzChi. Myself and four other designers - <a href="https://twitter.com/zlot" target="_blank">Mark Mitchell</a>, <a href="http://emilayang.com/" target="_blank">Emila Yang</a>, <a href="https://twitter.com/hanleyweng" target="_blank">Hanley Weng</a> and <a href="https://twitter.com/AdamCYounis" target="_blank">Adam Younis</a> - set out at 8am on Saturday morning with the design brief:
 				</p>
-				<blockquote>
-					"Design a system that takes advantage of cloud computing, mobile devices, and fast mobile networks to enhance the way people interact with each other collaboratively"
-				</blockquote>
+				<blockquote>Design a system that takes advantage of cloud computing, mobile devices, and fast mobile networks to enhance the way people interact with each other collaboratively.</blockquote>
 				<p>
 					We each split up and researched different areas before presenting our findings to the group. The key points were:
-					<ul>
-						<li>
-							The devices we use to share are often themselves isolated, but are becoming more and more synchronised.
-						</li>
-						<li>
-							A lot of contextually aware technology development is going into creating social or serendipitous experiences.
-						</li>
-						<li>
-							The concept of <em>"embodied knowledge"</em> — situational experience which helps us experience, understand and interact with the world.
-						</li>
-					</ul>
 				</p>
+				<ul>
+					<li>
+						The devices we use to share are often themselves isolated, but are becoming more and more synchronised.
+					</li>
+					<li>
+						A lot of contextually aware technology development is going into creating social or serendipitous experiences.
+					</li>
+					<li>
+						The concept of <em>"embodied knowledge"</em> — situational experience which helps us experience, understand and interact with the world.
+					</li>
+				</ul>
 			</div>
 		</article>
 	</section>
 
 	<section>
-		<img src="media/images/stateofmind/brainstorming-hd.jpg">
+		<img class="image-tilt js-tilt-image" src="media/images/stateofmind/brainstorming-hd.jpg">
 	</section>
 
 	<section>
@@ -104,15 +102,13 @@
 				<p>
 					We started to brainstorm some ideas around one simple question:
 				</p>
-				<blockquote>
-					"What can be done with technology but not in person?"
-				</blockquote>
+				<blockquote class="span-columns">What can be done with technology but not in person?</blockquote>
 			</div>
 		</article>
 	</section>
 
 	<section>
-		<img src="media/images/stateofmind/postits-hd.jpg">
+		<img class="image-tilt js-tilt-image" src="media/images/stateofmind/postits-hd.jpg">
 	</section>
 
 	<section>
