font change and responsive tabs plugin

--- a/stateofmind.html
+++ b/stateofmind.html
@@ -10,7 +10,7 @@
 	<script src="media/js/html5shiv.js"></script>
 	<![endif]-->
 
-	<link href='http://fonts.googleapis.com/css?family=Sorts+Mill+Goudy:400,400italic' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Lora:400,400italic' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="media/css/style.css" />
 </head>
 <body class="portfolio-piece has-header">
