--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-US">
-	<head>
+<head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 	<meta name="HandheldFriendly" content="true" />
@@ -10,153 +10,42 @@
 	<script src="media/js/html5shiv.js"></script>
 	<![endif]-->
 	
-	<link href='http://fonts.googleapis.com/css?family=Sorts+Mill+Goudy:400,400italic' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" type="text/css" href="media/css/style.css" />
-</head>
-<body class="home blog">
-	<div class="border"></div>
-
-	<section class="hero js-hero">
-		<!-- <div class="hero-main hero-text">
-			<span>Morgan Carter</span>
-		</div>
-		<div class="hero-main hero-bg"></div> -->
-		<div class="hero-content js-hero-content">
-			<h3 class="js-hero-height-one" style="margin-bottom: -10px;">Hi, I'm</h3>
-			<h1 class="js-hero-height-two">Morgan Carter</h1>
-			<h3 class="js-hero-height-three">
-				<a class="accent important js-what-am-i-refresh"><i class="icon-refresh"></i></a>
-				I'm <span class="js-what-am-i">a web developer</span>.
-			</h3>
-		</div>
-	</section>
-
-	<section class="clearfix">
-		<article>
-			<h3 class="title">About me</h3>
-			<div class="paragraph">
-				<p>I'm:</p>
-				<ul>
-					<li>
-						a Web Developer and Interaction Designer.
-					</li>
-					<li>
-						currently employed at <a href="//www.stackla.com" target="_blank">Stackla</a>.
-					</li>
-					<li>
-						living in <a href="https://www.google.com/maps/place/Sydney+NSW/@-33.8744203,151.2183768,13z/data=!4m2!3m1!1s0x6b129838f39a743f:0x3017d681632a850">Sydney, Australia</a>.
-					</li>
-					<li>
-						currently listening to <a href="http://open.spotify.com/track/6a8cSWHDPLihu4liqTlzX6" target="_blank">The Tragically Hip</a>.
-					</li>
-					<li>
-						trying to find a new pair of appropriately hipster glasses.
-					</li>
-					<li>
-						always interested in cool projects, so drop me a line: <a href="mailto:morgancarter1@gmail.com">morgancarter1@gmail.com</a>.
-					</li>
-				</ul>
-			</div>
-		</article>
-	</section>
-
-	<section>
-		<article>
-			<h3 class="title">Portfolio</h3>
-			<div class="paragraph">
-				<p>
-					These are some of the things I've made over the years - some are designed, others just coded up. Check out the descriptions in each for more info! If you're interested in working with me, <a class='important' href='mailto:morgancarter1@gmail.com'>drop me a line</a>.
-				</p>
-			</div>
-			<ul class="grid portfolio clearfix">
-				<li class="col-2">
-					<article>
-						<a href="stateofmind.html">
-							<div class="description">
-								<h4>State of Mind</h4>
-								<p>This conceptual design project was one of the finalists for the 2012 OzChi 24hr Student Competition.</p>
-							</div>
-							<img src="media/images/stateofmind/standing.jpg">
-						</a>
-					</article>
-				</li>
-				<li class="col-2">
-					<article>
-						<a>
-							<div class="description">
-								<h4>Stackla.com Website</h4>
-								<p>The Stackla website is fully responsive and retina, and features HTML5 video and Stackla social widgets.</p>
-							</div>
-							<img src="media/images/stacklawww/home.jpg">
-						</a>
-					</article>
-				</li>
-				<li class="col-2">
-					<article>
-						<a>
-							<div class="description">
-								<h4>State of Mind</h4>
-								<p>This conceptual design project was one of the finalists for the 2012 OzChi 24hr Student Competition.</p>
-							</div>
-							<img src="media/images/stateofmind/postits.jpg">
-						</a>
-					</article>
-				</li>
-				<li class="col-2">
-					<article>
-						<a>
-							<div class="description">
-								<h4>State of Mind</h4>
-								<p>This conceptual design project was one of the finalists for the 2012 OzChi 24hr Student Competition.</p>
-							</div>
-							<img src="media/images/stateofmind/brainstorming.jpg">
-						</a>
-					</article>
-				</li>
-			</ul>
-			<!--<script>var stackWidgetAssetPath = "//widgetapp.teaser.stackla.com/"; var stackWidgetDomain = "widgetapp.teaser.stackla.com"</script>
-			<div class='stacklafw' data-id='75' data-ct='' data-alias='morgan.teaser.stackla.com' data-ttl="30"></div>
-			<script type='text/javascript'>
-			    (function (d, id) {
-			        if (d.getElementById(id)) return;
-			        var t = d.createElement('script');
-			        t.type = 'text/javascript';
-			        t.src = 'http://morgan.teaser.stackla.com/media/js/widget/fluid-embed-preview.js';
-			        t.id = id;
-			        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(t);
-
-					var css = document.createElement('link');
-					css.rel = 'stylesheet';
-					css.href = 'http://morgan.teaser.stackla.com/media/css/widget/stacklapopup/stacklapopup.css';
-					(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(css);
-			    }(document, 'stacklafw-js'));
-			</script>
-			</div>-->
-		</article>
-	</section>
-
-	<section class="clearfix">
-		<article>
-			<h3 class="title">Get in touch</h3>
-			<div class="paragraph">
-				<p>There's a few ways to get in touch:</p>
-				<ul>
-					<li>
-						<a href="mailto:morgancarter1@gmail.com">Email</a> is probably the easiest.
-					</li>
-					<li>
-						You can find me on <a href="https://twitter.com/morgoe876" target="_blank">Twitter</a> but please don't take me seriously there!
-					</li>
-					<li>
-						I recently acquired a <a href="https://dribbble.com/morgoe876" target="_blank">Dribbble</a> account too.
-					</li>
-				</ul>
-			</div>
-		</article>
-	</section>
+	<link href='http://fonts.googleapis.com/css?family=Lora:400,400italic' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" type="text/css" href="media/css/jquery.fullPage.css" />
+	<link rel="stylesheet" type="text/css" href="media/css/typography.css" />
+	<link rel="stylesheet" type="text/css" href="media/css/layout.css" />
+	<link rel="stylesheet" type="text/css" href="media/css/hero.css" />
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 	<script src='media/js/fastclick.js'></script>
-	<script src='media/js/script.js'></script>
+	<script src='media/js/jquery.fullPage.min.js'></script>
+	<script src="media/js/jquery.easings.min.js"></script>
+	<script src='media/js/script2.js'></script>
+</head>
+<body class="home blog">
+	<div id="fullpage">
+		<div class="section">
+			<div class="hero clearfix">
+				<div class="pull-left grid-7-12">
+					<span class="f-large pull-left">
+						Hi, I'm
+					</span>
+					<h1 class="pull-left uppercase">
+						Morgan</br>Carter
+					</h1>
+				</div>
+				<div class="pull-right grid-5-12">
+					<p class="f-large">
+						I’m an interaction designer based in Sydney. I design beautiful websites.
+					</p>
+					<button data-text="Discover"></button>
+				</div>
+			</div>
+		</div>
+		<div class="section blurrybg"><h1>Hello</h1></div>
+		<div class="section blurrybg"><h1>Hello</h1></div>
+		<div class="section blurrybg"><h1>Hello</h1></div>
+		<div class="section blurrybg"><h1>Hello</h1></div>
+	</div>
 </body>
 </html>
