--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<script src="media/js/html5shiv.js"></script>
 	<![endif]-->
 	
-	<link href='http://fonts.googleapis.com/css?family=Lora:400,400italic' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Merriweather:300,300italic' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="media/css/jquery.fullPage.css" />
 	<link rel="stylesheet" type="text/css" href="media/css/typography.css" />
 	<link rel="stylesheet" type="text/css" href="media/css/layout.css" />
