shitty animation code to clean up later

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<!--[if lt IE 9]>
 	<script src="media/js/html5shiv.js"></script>
 	<![endif]-->
-	
+
 	<link href='http://fonts.googleapis.com/css?family=Merriweather:300,300italic' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="media/css/jquery.fullPage.css" />
 	<link rel="stylesheet" type="text/css" href="media/css/typography.css" />
@@ -27,18 +27,18 @@
 		<div class="section">
 			<div class="hero clearfix">
 				<div class="pull-left grid-7-12">
-					<span class="f-large pull-left">
+					<span class="f-large pull-left animate-before js-animate-1">
 						Hi, I'm
 					</span>
-					<h1 class="pull-left uppercase">
+					<h1 class="pull-left uppercase animate-before animate-before-2 js-animate-2">
 						Morgan</br>Carter
 					</h1>
 				</div>
 				<div class="pull-right grid-5-12">
-					<p class="f-large">
+					<p class="f-large animate-before animate-before-3 js-animate-3">
 						I’m an interaction designer based in Sydney. I design beautiful websites.
 					</p>
-					<button data-text="Discover"></button>
+					<button data-text="Discover" class="animate-before animate-before-4 js-animate-4"></button>
 				</div>
 			</div>
 		</div>
