--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 <head>
 	<meta charset="UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui" />
 	<meta name="HandheldFriendly" content="true" />
 	<meta name="apple-mobile-web-app-capable" content="YES" />
 	<title>Morgan Carter</title>
@@ -10,74 +10,150 @@
 	<script src="media/js/html5shiv.js"></script>
 	<![endif]-->
 
-	<link href='http://fonts.googleapis.com/css?family=Merriweather:300,300italic' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" type="text/css" href="media/css/Burner.min.css" />
-	<link rel="stylesheet" type="text/css" href="media/css/Flora.min.css" />
-	<link rel="stylesheet" type="text/css" href="media/css/jquery.fullPage.css" />
-	<link rel="stylesheet" type="text/css" href="media/css/typography.css" />
-	<link rel="stylesheet" type="text/css" href="media/css/layout.css" />
-	<link rel="stylesheet" type="text/css" href="media/css/home.css" />
+	<link rel="stylesheet" type="text/css" href="media/css/style.css" />
+</head>
+<body>
+		<div id="fullpage">
+			<section class="section bg-white">
+				<div class="container mobile-align-center">
+					<div class="grid grid-6-12">
+						<div class="f-large align-right hi-im superscript">
+							Hi, I'm
+						</div>
+						<h1 class="pull-right uppercase align-right">
+							Morgan<br>Carter
+						</h1>
+					</div>
+					<div class="grid grid-6-12 short-width offset-top">
+						<p class="f-large">
+							I’m an interaction designer based in Sydney. I make beautiful websites.
+						</p>
+						<button class="">Explore</button>
+					</div>
+				</div>
+			</section>
 
-	<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script> -->
+
+			<section class="section dark bg-blue">
+				<div class="text container">
+					<div class="grid grid-4-12 offset-top-large">
+						<div class="f-large align-right superscript mobile-hide">
+							A little about
+						</div>
+						<h1 class="pull-right uppercase align-right mobile-align-center">
+							About<span class="mobile-hide"><br>Me</span>
+						</h1>
+					</div>
+					<div class="grid grid-8-12">
+						<img class="me mobile-align-center mobile-hide" src="media/images/me.jpg">
+						<p class="f-large">
+							I live in Sydney, Australia.
+							<br>
+							I'm currently working for <a>Stackla</a> as a web designer.
+							<br>
+							I love music - currently playing drums in a band and listening to <a>Ulver</a>.
+						</p>
+					</div>
+				</div>
+			</section>
+
+
+			<section class="section dark bg-black">
+				<div class="container wide">
+					<div class="text grid grid-4-12">
+						<div class="f-large align-right superscript mobile-hide">
+							Web Design + Coding
+						</div>
+						<h1 class="pull-right uppercase align-right">
+							True Skate
+						</h1>
+						<p class="f-large align-right">
+							True Skate is the #1 game on the app store in 70 countries.
+							We used Stackla to promote social content around the game,
+							engage users to post their own content, and drive sales.
+						</p>
+						<a class="button pull-right" href="http://social.trueskate.com" target="_blank">Visit Site <i class="icon-right"></i></a>
+					</div>
+					<div class="grid grid-8-12">
+						<div class="img-viewer">
+							<img src="media/images/stackla.jpg">
+						</div>
+					</div>
+				</div>
+			</section>
+
+
+			<section class="section dark bg-black">
+				<div class="container wide">
+					<div class="text grid grid-4-12">
+						<div class="f-large align-right superscript mobile-hide">
+							Coding
+						</div>
+						<h1 class="pull-right uppercase align-right">
+							Asia's Next Top Model
+						</h1>
+						<p class="f-large align-right">
+							Pretty pretty site, eh?
+						</p>
+						<a class="button pull-right" href="http://asntm2.starworldasia.tv/" target="_blank">Visit Site <i class="icon-right"></i></a>
+					</div>
+					<div class="grid grid-8-12">
+						<div class="img-viewer">
+							<img src="media/images/stackla.jpg">
+						</div>
+					</div>
+				</div>
+			</section>
+
+
+			<section class="section dark bg-black">
+				<div class="container wide">
+					<div class="text grid grid-4-12">
+						<div class="f-large align-right superscript mobile-hide">
+							Web Design + Coding
+						</div>
+						<h1 class="pull-right uppercase align-right">
+							Stackla
+						</h1>
+						<p class="f-large align-right">
+							Oh yeah. All me, muthafuckas.
+						</p>
+						<a class="button pull-right" href="http://stackla.com" target="_blank">Visit Site <i class="icon-right"></i></a>
+					</div>
+					<div class="grid grid-8-12">
+						<div class="img-viewer">
+							<img src="media/images/stackla.jpg">
+						</div>
+					</div>
+				</div>
+			</section>
+
+
+			<section class="section bg-wheat">
+				<div class="container mobile-align-center">
+					<div class="grid grid-6-12">
+						<h1 class="pull-right uppercase align-right">
+							Contact<br>Me
+						</h1>
+					</div>
+					<div class="grid grid-6-12 short-width offset-top">
+						<p class="f-large">
+							<a mailto="morgancarter1@gmail.com"><i class="icon-fw icon-mail"></i>morgancarter1@gmail.com</a>
+							<br>
+							<a><i class="icon-fw icon-phone"></i>0434 886 047</a>
+							<br>
+							<a href="https://dribbble.com/morgoe" target="_blank"><i class="icon-fw icon-dribbble"></i>morgoe</a>
+							<br>
+							<a href="https://twitter.com/morgoe876" target="_blank"><i class="icon-fw icon-twitter"></i>morgoe876</a>
+						</p>
+					</div>
+				</div>
+			</section>
+		</div>
 	<script src='media/js/jquery-1.8.1.min.js'></script>
 	<script src='media/js/fastclick.js'></script>
 	<script src='media/js/jquery.fullPage.min.js'></script>
 	<script src="media/js/jquery.easings.min.js"></script>
-	<script src='media/js/Burner.min.js'></script>
-	<script src='media/js/Flora.min.js'></script>
 	<script src='media/js/script4.js'></script>
-	<style>
-	</style>
-</head>
-<body>
-	<div id="fullpage">
-		<section class="section bg-white">
-			<div class="hero clearfix">
-				<div class="pull-left grid-7-12">
-					<span class="f-large pull-left animate-before js-animate-1">
-						Hi, I'm
-					</span>
-					<h1 class="pull-left uppercase animate-before animate-before-2 js-animate-2">
-						Morgan</br>Carter
-					</h1>
-				</div>
-				<div class="pull-right grid-5-12">
-					<p class="f-large animate-before animate-before-3 js-animate-3">
-						I’m an interaction designer based in Sydney. I make beautiful websites.
-					</p>
-					<span class="animate-before animate-before-4 js-animate-4">
-						<button class="">Explore</button>
-					</span>
-					<!-- <button class="animate-before animate-before-4 js-animate-4">Explore</button> -->
-					
-				</div>
-			</div>
-		</section>
-		<section class="section dark bg-blue align-center" id="js-particle-container">
-			<!-- <canvas id="testCanvas"></canvas> -->
-			<ul id="bokeh"></ul>
-			<div class="text">
-				<h2 class="uppercase">About me</h2>
-				<p class="f-large">
-					I'm currently working at <a href="http://stackla.com" target="_blank">Stackla</a> as a Web/UX Designer. I love music and pretty things. Right now I'm listening to <a href="http://open.spotify.com/track/6YaCKTSSA6WuaSzyCSJVCg" target="_blank">Martha by Tom Waits</a>.
-				</p>
-			</div>
-		</section>
-		<section class="section blurrybg"><h1>Hello</h1></section>
-		<section class="section dark bg-green align-center">
-			<div class="text">
-				<h2 class="uppercase">Contact me</h2>
-				<p class="f-large">
-					If you'd like to get in touch, you can contact me at <a href="https://twitter.com/morgoe876" target="_blank">@morgoe876</a> or fill in this:
-				</p>
-				<form>
-					<input type="text" placeholder="Name">
-					<input type="email" placeholder="Email Address">
-					<textarea placeholder="I like to eat poo."></textarea>
-					<button>Submit</button>
-				</form>
-			</div>
-		</section>
-	</div>
 </body>
 </html>
