--- a/stackla.html
+++ b/stackla.html
@@ -1,6 +1,45 @@
 <?php include 'head'; ?>
 
-	<div class="border"></div>
+	<header>
+		<nav>
+			<ul class="clearfix">
+				<li>
+					<a class="js-open-mobile-nav">☰</a>
+				</li>
+				<li>
+					<a>Home</a>
+				</li>
+				<li>
+					<a>About</a>
+				</li>
+				<li class="active">
+					<a>Portfolio</a>
+				</li>
+				<li>
+					<a>Contact</a>
+				</li>
+			</ul>
+		</nav>
+	</header>
+	<div class="mobile-nav">
+		<nav>
+			<ul>
+				<li>
+					<a>Home</a>
+				</li>
+				<li>
+					<a>About</a>
+				</li>
+				<li class="active">
+					<a>Portfolio</a>
+				</li>
+				<li>
+					<a>Contact</a>
+				</li>
+			</ul>
+		</nav>
+	</div>
+	<div class="mobile-nav-closer js-close-mobile-nav"></div>
 
 	<section class="hero" style="background-image: url(media/images/stateofmind/standing-hd.jpg);">
 		<!-- <div class="hero-main hero-text">
