--- a/stateofmind.html
+++ b/stateofmind.html
@@ -13,59 +13,15 @@
 	<link href='http://fonts.googleapis.com/css?family=Lora:400,400italic' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="media/css/style.css" />
 </head>
-<body class="portfolio-piece has-header">
-	<header>
-		<nav>
-			<ul class="clearfix">
-				<li>
-					<a class="js-open-mobile-nav">☰</a>
-				</li>
-				<li>
-					<a>Home</a>
-				</li>
-				<li>
-					<a>About</a>
-				</li>
-				<li class="active">
-					<a>Portfolio</a>
-				</li>
-				<li>
-					<a>Contact</a>
-				</li>
-			</ul>
-		</nav>
-	</header>
-	<div class="mobile-nav">
-		<nav>
-			<ul>
-				<li>
-					<a>Home</a>
-				</li>
-				<li>
-					<a>About</a>
-				</li>
-				<li class="active">
-					<a>Portfolio</a>
-				</li>
-				<li>
-					<a>Contact</a>
-				</li>
-			</ul>
-		</nav>
-	</div>
-	<div class="mobile-nav-closer js-close-mobile-nav"></div>
+<body class="portfolio-piece">
 
 	<section class="hero" style="background-image: url(media/images/stateofmind/standing-hd.jpg);">
-		<!-- <div class="hero-main hero-text">
-			<span>Morgan Carter</span>
-		</div>
-		<div class="hero-main hero-bg"></div> -->
 		<div class="hero-content">
 			<h1>State of Mind</h1>
 		</div>
 	</section>
 
-	<section class="clearfix">
+	<section>
 		<article>
 			<h3 class="title">The Project</h3>
 			<div class="paragraph">
@@ -100,9 +56,8 @@
 			<h3 class="title">Brainstorming</h3>
 			<div class="paragraph">
 				<p>
-					We started to brainstorm some ideas around one simple question:
+					We started to brainstorm some ideas around one simple question: "What can be done with technology but not in person?"
 				</p>
-				<blockquote class="span-columns">What can be done with technology but not in person?</blockquote>
 			</div>
 		</article>
 	</section>
@@ -110,6 +65,24 @@
 	<section>
 		<img class="image-tilt js-tilt-image" src="media/images/stateofmind/postits-hd.jpg">
 	</section>
+
+	<section>
+		<article>
+			<h3 class="title">The Submission</h3>
+			<div class="paragraph">
+				<p>
+					We submitted this video:
+				</p>
+			</div>
+		</article>
+	</section>
+
+	<section>
+		<div class="responsive-video">
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/EB_LHBOdLaI" frameborder="0" allowfullscreen></iframe>
+		</div>
+	</section>
+
 
 	<section>
 		<article>
@@ -125,25 +98,18 @@
 		</article>
 	</section>
 
-	<section>
-		<div class="responsive-video">
-			<iframe width="560" height="315" src="https://www.youtube.com/embed/EB_LHBOdLaI" frameborder="0" allowfullscreen></iframe>
-		</div>
-	</section>
 
-	<section class="clearfix">
-		<article>
-			<h3 class="title">The End</h3>
-			<div class="paragraph">
-				<p>
-					That's it for this article. What, did you want more? Well, you can either read another <a>article</a>, or get your own piece up here by clicking the ridiculously huge button below. You can't miss it.
-				</p>
-			</div>
-			<div class="cta-wrapper">
-				<a class="cta">
-					<h3>Get in touch</h3>
-				</a>
-			</div>
+	<section class="cta" style="background-image: url(media/images/stateofmind/standing-hd.jpg);">
+		<article class="col-3 cta-home">
+			<a href="">Back Home</a>
+		</article>
+		<article class="col-3 cta-another">
+			<a href="">
+				<span>Read More</span>
+			</a>
+		</article>
+		<article class="col-3 cta-contact">
+			<a href="">Get in Touch</a>
 		</article>
 	</section>
 
