better for mobile + tablet views

--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
 		<div id="fullpage">
 			<section class="section bg-white">
 				<div class="container mobile-align-center">
-					<div class="grid grid-6-12">
+					<div class="grid grid-6-12 offset-bottom-1">
 						<div class="f-large align-right hi-im superscript">
 							Hi, I'm
 						</div>
-						<h1 class="pull-right uppercase align-right">
+						<h1 class="pull-right uppercase align-right padding-bottom">
 							Morgan<br>Carter
 						</h1>
 					</div>
-					<div class="grid grid-6-12 short-width offset-top">
-						<p class="f-large">
+					<div class="grid grid-6-12 offset-top-1">
+						<p class="f-large short-width">
 							I’m an interaction designer based in Sydney. I make beautiful websites.
 						</p>
 						<button class="">Explore</button>
@@ -36,15 +36,15 @@
 
 			<section class="section dark bg-blue">
 				<div class="text container">
-					<div class="grid grid-4-12 offset-top-large">
-						<div class="f-large align-right superscript mobile-hide">
+					<div class="grid grid-4-12 offset-top-2">
+						<div class="f-large align-right superscript tablet-hide">
 							A little about
 						</div>
-						<h1 class="pull-right uppercase align-right mobile-align-center">
-							About<span class="mobile-hide"><br>Me</span>
+						<h1 class="pull-right uppercase align-right mobile-align-center padding-bottom">
+							About <br class="tablet-hide">Me
 						</h1>
 					</div>
-					<div class="grid grid-8-12">
+					<div class="grid grid-8-12 offset-bottom-2">
 						<img class="me mobile-align-center mobile-hide" src="media/images/me.jpg">
 						<p class="f-large">
 							I live in Sydney, Australia.
@@ -61,16 +61,16 @@
 			<section class="section dark bg-black">
 				<div class="container wide">
 					<div class="text grid grid-4-12">
-						<div class="f-large align-right superscript mobile-hide">
+						<div class="f-small align-right superscript tablet-hide">
 							Web Design + Coding
 						</div>
-						<h1 class="pull-right uppercase align-right">
+						<h1 class="pull-right uppercase align-right padding-bottom">
 							True Skate
 						</h1>
-						<p class="f-large align-right">
+						<p class="f-medium align-right">
 							True Skate is the #1 game on the app store in 70 countries.
-							We used Stackla to promote social content around the game,
-							engage users to post their own content, and drive sales.
+							<span class="mobile-hide">We used Stackla to promote social content around the game<span class="tablet-hide">,
+							engage users to post their own content, and drive sales</span>.</span>
 						</p>
 						<a class="button pull-right" href="http://social.trueskate.com" target="_blank">Visit Site <i class="icon-right"></i></a>
 					</div>
@@ -86,13 +86,13 @@
 			<section class="section dark bg-black">
 				<div class="container wide">
 					<div class="text grid grid-4-12">
-						<div class="f-large align-right superscript mobile-hide">
+						<div class="f-small align-right superscript tablet-hide">
 							Coding
 						</div>
-						<h1 class="pull-right uppercase align-right">
+						<h1 class="pull-right uppercase align-right padding-bottom">
 							Asia's Next Top Model
 						</h1>
-						<p class="f-large align-right">
+						<p class="f-medium align-right">
 							Pretty pretty site, eh?
 						</p>
 						<a class="button pull-right" href="http://asntm2.starworldasia.tv/" target="_blank">Visit Site <i class="icon-right"></i></a>
@@ -109,13 +109,13 @@
 			<section class="section dark bg-black">
 				<div class="container wide">
 					<div class="text grid grid-4-12">
-						<div class="f-large align-right superscript mobile-hide">
+						<div class="f-small align-right superscript tablet-hide">
 							Web Design + Coding
 						</div>
-						<h1 class="pull-right uppercase align-right">
+						<h1 class="pull-right uppercase align-right padding-bottom">
 							Stackla
 						</h1>
-						<p class="f-large align-right">
+						<p class="f-medium align-right">
 							Oh yeah. All me, muthafuckas.
 						</p>
 						<a class="button pull-right" href="http://stackla.com" target="_blank">Visit Site <i class="icon-right"></i></a>
@@ -131,12 +131,12 @@
 
 			<section class="section bg-wheat">
 				<div class="container mobile-align-center">
-					<div class="grid grid-6-12">
+					<div class="grid grid-6-12 offset-bottom-3">
 						<h1 class="pull-right uppercase align-right">
-							Contact<br>Me
+							Contact<br class="tablet-hide"> Me
 						</h1>
 					</div>
-					<div class="grid grid-6-12 short-width offset-top">
+					<div class="grid grid-6-12 short-width offset-top-3">
 						<p class="f-large">
 							<a mailto="morgancarter1@gmail.com"><i class="icon-fw icon-mail"></i>morgancarter1@gmail.com</a>
 							<br>
