--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui" />
 	<meta name="HandheldFriendly" content="true" />
 	<meta name="apple-mobile-web-app-capable" content="YES" />
-	<title>Morgan Carter</title>
+	<title>Morgan Carter - Designer</title>
+	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 	<!--[if lt IE 9]>
 	<script src="media/js/html5shiv.js"></script>
 	<![endif]-->
@@ -17,18 +18,18 @@
 			<section class="section bg-white">
 				<div class="container mobile-align-center">
 					<div class="grid grid-6-12 offset-bottom-1">
-						<div class="f-large align-right hi-im superscript">
+						<div class="f-large align-right hi-im superscript animate-before js-animate-1">
 							Hi, I'm
 						</div>
-						<h1 class="pull-right uppercase align-right padding-bottom">
+						<h1 class="pull-right uppercase align-right padding-bottom animate-before js-animate-2">
 							Morgan<br>Carter
 						</h1>
 					</div>
 					<div class="grid grid-6-12 offset-top-1">
-						<p class="f-large short-width">
+						<p class="f-large short-width animate-before js-animate-3">
 							I’m an interaction designer based in Sydney. I make beautiful websites.
 						</p>
-						<button class="">Explore</button>
+						<button class="animate-before js-animate-4">Explore</button>
 					</div>
 				</div>
 			</section>
@@ -41,17 +42,18 @@
 							A little about
 						</div>
 						<h1 class="pull-right uppercase align-right mobile-align-center padding-bottom">
-							About <br class="tablet-hide">Me
+							About<br class="tablet-hide"> Me
 						</h1>
 					</div>
 					<div class="grid grid-8-12 offset-bottom-2">
 						<img class="me mobile-align-center mobile-hide" src="media/images/me.jpg">
+						<div class="me-blurry"></div>
 						<p class="f-large">
 							I live in Sydney, Australia.
 							<br>
-							I'm currently working for <a>Stackla</a> as a web designer.
+							I'm currently working for <a>Stackla</a>.
 							<br>
-							I love music - currently playing drums in a band and listening to <a>Ulver</a>.
+							I play drums in a band and I'm listening to <a>Ulver</a> right now.
 						</p>
 					</div>
 				</div>
@@ -69,14 +71,14 @@
 						</h1>
 						<p class="f-medium align-right">
 							True Skate is the #1 game on the app store in 70 countries.
-							<span class="mobile-hide">We used Stackla to promote social content around the game<span class="tablet-hide">,
+							<span class="mobile-hide">We used Stackla to create a microsite that would promote the brand's social media<span class="tablet-hide">,
 							engage users to post their own content, and drive sales</span>.</span>
 						</p>
 						<a class="button pull-right" href="http://social.trueskate.com" target="_blank">Visit Site <i class="icon-right"></i></a>
 					</div>
 					<div class="grid grid-8-12">
 						<div class="img-viewer">
-							<img src="media/images/stackla.jpg">
+							<img src="media/images/trueskate.jpg">
 						</div>
 					</div>
 				</div>
@@ -89,17 +91,17 @@
 						<div class="f-small align-right superscript tablet-hide">
 							Coding
 						</div>
-						<h1 class="pull-right uppercase align-right padding-bottom">
+						<h2 class="pull-right uppercase align-right padding-bottom">
 							Asia's Next Top Model
-						</h1>
+						</h2>
 						<p class="f-medium align-right">
-							Pretty pretty site, eh?
+							Built to support the TV show and promote social engagement after each week's program. A custom Wordpress theme built from scratch to suit the client's designs. Fully responsive, retina and all that jazz.
 						</p>
 						<a class="button pull-right" href="http://asntm2.starworldasia.tv/" target="_blank">Visit Site <i class="icon-right"></i></a>
 					</div>
 					<div class="grid grid-8-12">
 						<div class="img-viewer">
-							<img src="media/images/stackla.jpg">
+							<img src="media/images/asntm.jpg">
 						</div>
 					</div>
 				</div>
@@ -116,7 +118,7 @@
 							Stackla
 						</h1>
 						<p class="f-medium align-right">
-							Oh yeah. All me, muthafuckas.
+							The website draws most of Stackla's leads by showcasing Stackla's five different solutions, showing the most popular clients, and using a fun animation to quickly explain what the product does.
 						</p>
 						<a class="button pull-right" href="http://stackla.com" target="_blank">Visit Site <i class="icon-right"></i></a>
 					</div>
