--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 							Asia's Next Top Model
 						</h2>
 						<p class="f-medium align-right">
-							Built to support the TV show and promote social engagement after each week's program. A custom Wordpress theme built from scratch to suit the client's designs. Fully responsive, retina and all that jazz.
+							Built to support the TV show and promote social engagement after each week's program.<span class="tablet-hide"> A custom Wordpress theme built from scratch to suit the client's designs. Fully responsive, retina and all that jazz.</span>
 						</p>
 						<a class="button pull-right" href="http://asntm2.starworldasia.tv/" target="_blank">Visit Site <i class="icon-right"></i></a>
 					</div>
@@ -118,7 +118,7 @@
 							Stackla
 						</h1>
 						<p class="f-medium align-right">
-							The website draws most of Stackla's leads by showcasing Stackla's five different solutions, showing the most popular clients, and using a fun animation to quickly explain what the product does.
+							The website draws most of Stackla's leads by showcasing Stackla's five different solutions<span class="tablet-hide">, showing the most popular clients, and using a fun animation to quickly explain what the product does</span>.
 						</p>
 						<a class="button pull-right" href="http://stackla.com" target="_blank">Visit Site <i class="icon-right"></i></a>
 					</div>
