resume and link changes

--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
 						<p class="f-large">
 							I live in Sydney, Australia.
 							<br>
-							I'm currently working for <a>Stackla</a>.
+							I'm currently working for <a href="http://stackla.com/" target="_blank">Stackla</a>.
 							<br>
-							I play drums in a band and I'm listening to <a>Ulver</a> right now.
+							I play drums in a band and I'm listening to <a href="http://open.spotify.com/album/44zxsD8WYyaxxPhdswZZAa" target="_blank">Ulver</a> right now.
 						</p>
 					</div>
 				</div>
@@ -133,16 +133,21 @@
 
 			<section class="section bg-wheat">
 				<div class="container mobile-align-center">
-					<div class="grid grid-6-12 offset-bottom-3">
+					<div class="grid grid-6-12">
 						<h1 class="pull-right uppercase align-right">
 							Contact<br class="tablet-hide"> Me
 						</h1>
 					</div>
-					<div class="grid grid-6-12 short-width offset-top-3">
+					<div class="grid grid-6-12">
 						<p class="f-large">
-							<a mailto="morgancarter1@gmail.com"><i class="icon-fw icon-mail"></i>morgancarter1@gmail.com</a>
+							If you'd like to work with me, contact me on one of these:
+							<br>
+							<a href="mailto:morgancarter1@gmail.com"><i class="icon-fw icon-mail"></i>morgancarter1@gmail.com</a>
 							<br>
 							<a><i class="icon-fw icon-phone"></i>0434 886 047</a>
+							<br>
+							<br>
+							Or you can check out these:
 							<br>
 							<a href="https://dribbble.com/morgoe" target="_blank"><i class="icon-fw icon-dribbble"></i>morgoe</a>
 							<br>
